# var-settlement

./: .gitignore  .program-id  Anchor.toml  Cargo.toml  DEPLOYMENTS.md  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  spec.md
crates/rulebook/: Cargo.toml
crates/rulebook/src/: lib.rs
crates/rulebook/tests/: golden.rs  outcome.rs  payout_props.rs  resolve.rs  settlement.rs
docs/: AUDIT.md  DEMO_VIDEO_SCRIPT.md  KANI_PROOF_TRANSCRIPT.txt  TRUST_SURFACE.md  TXLINE_API_FEEDBACK.md  _config.yml  index.md
idl/: txoracle_devnet.json  var_settlement.json
programs/mock-txoracle/: Cargo.toml
programs/mock-txoracle/src/: lib.rs
programs/var-settlement/: Cargo.toml
programs/var-settlement/src/: lib.rs
scenarios/: 01_home-win-argentina-mexico.json  02_away-win-germany-japan.json  03_group-stage-draw-netherlands-ecuador.json  04_goalless-draw-denmark-tunisia.json  05_extra-time-draw-germany-algeria.json  06_penalties-draw-argentina-france-final.json  07_var-disallowed-goal-argentina-saudi.json  08_abandoned-match-refund.json  09_postponed-match-refund.json  10_void-match-refund.json  11_zero-winning-pool-morocco-portugal.json  12_high-scoring-fee-brazil-chile.json
tests-devnet/: package.json  reverify.ts  smoke.ts  txline-activate.ts  txline-explore.ts  txline-settle.ts
