[package]
name = "var-settlement"
version = "0.1.0"
edition = "2021"
description = "VAR — trustless, Kani-proven settlement for World Cup 1X2 markets, resolving from Tx LINE's on-chain Merkle feed."
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "var_settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-program = "2.3"
rulebook = { path = "../../crates/rulebook" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }
